scripts/errors/output_fsevalcombo_tcga_ucec.txt
Traceback (most recent call last):
  File "/media/nfs/Desktop/OViTANet/main.py", line 260, in <module>
    from utils.core_utils import train
  File "/media/nfs/Desktop/OViTANet/utils/core_utils.py", line 10, in <module>
    from utils.utils import *
  File "/media/nfs/Desktop/OViTANet/utils/utils.py", line 11, in <module>
    from models.vit2d import ViT
  File "/media/nfs/Desktop/OViTANet/models/vit2d.py", line 4, in <module>
    from models.mlp_model import MLP
  File "/media/nfs/Desktop/OViTANet/models/mlp_model.py", line 110
    for fusion in ["concat", "adaptive", "multiply"]
                                                    ^
SyntaxError: expected ':'
Traceback (most recent call last):
  File "/media/nfs/Desktop/OViTANet/main.py", line 260, in <module>
    from utils.core_utils import train
  File "/media/nfs/Desktop/OViTANet/utils/core_utils.py", line 10, in <module>
    from utils.utils import *
  File "/media/nfs/Desktop/OViTANet/utils/utils.py", line 11, in <module>
    from models.vit2d import ViT
  File "/media/nfs/Desktop/OViTANet/models/vit2d.py", line 4, in <module>
    from models.mlp_model import MLP
  File "/media/nfs/Desktop/OViTANet/models/mlp_model.py", line 111
    model = MB_MLP([100, 200, 400], mm_fusion=fusion)
    ^
IndentationError: expected an indented block after 'for' statement on line 110
